removed the footer

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </div>
       </section>
       <footer>
-        © <span id="y"></span> S. V. Sanath Reddy — Built with vanilla HTML/CSS/JS. Hosted on GitHub Pages.
+        <p>Made by Sanath</p>
       </footer>
     </main>
   </div>
