error occured soo kept footer as it is

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </div>
       </section>
       <footer>
-        <p>Made by Sanath</p>
+        © <span id="y"></span> S. V. Sanath Reddy — Built with vanilla HTML/CSS/JS. Hosted on GitHub Pages.
       </footer>
     </main>
   </div>
