added the footer

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         </div>
       </section>
       <footer>
-        © <span id="y"></span> S. V. Sanath Reddy — Built with vanilla HTML/CSS/JS. Hosted on GitHub Pages.
+        © <span id="y"></span> SV Sanath Reddy.
       </footer>
     </main>
   </div>
