made change in metadata

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sigineni Venkata Sanath Reddy — Résumé</title>
   <meta name="description" content="Sanath Reddy — MRD Scholar, CSE @ PES University. AI, RAG, IoT Security. Projects: CuraMate, Campes, Tech Tails, TraffixBLR." />
-  <meta property="og:title" content="Sanath Reddy — Résumé" />
+  <meta property="og:title" content="SV Sanath Reddy — RESUME" />
   <meta property="og:description" content="AI + Security projects. MRD Scholar. PES University." />
   <meta name="theme-color" content="#0b1020" />
   <style>
