changed the github link

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <p><b>Phone:</b> <a href="tel:+916360550392">+91 6360550392</a></p>
             <p><b>Email:</b> <a id="email" href="mailto:kalpanabandi1982@gmail.com">kalpanabandi1982@gmail.com</a></p>
             <p><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/svsanath" target="_blank">linkedin.com/in/svsanath</a></p>
-            <p><b>GitHub:</b> <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></p>
+            <p><b>GitHub:</b> <a href="https://github.com/SanathSV" target="_blank">github.com/SanathSV</a></p>
           </div>
         </div>
       </section>
