--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sigineni Venkata Sanath Reddy — Résumé</title>
-  <meta name="description" content="Sanath Reddy — MRD Scholar, CSE @ PES University. AI, RAG, IoT Security. Projects: CuraMate, Campes, Tech Tails, TraffixBLR." />
+  <meta name="description" content="Sanath Reddy — MRD Scholar, CSE @ PES University. AI, RAG, IoT Security. Projects: CuraMate, Mental Health Monitor, Campes, Tech Tails, TraffixBLR." />
   <meta property="og:title" content="SV Sanath Reddy — RESUME" />
   <meta property="og:description" content="AI + Security projects. MRD Scholar. PES University." />
   <meta name="theme-color" content="#0b1020" />
@@ -190,7 +190,7 @@
 @media (max-width: 860px){
   .nav-toggle { display: block; z-index: 4000; }
 
-  /* Use fixed so it’s never hidden behind anything */
+  /* Use fixed so it's never hidden behind anything */
   .nav-links{
     position: fixed;
     top: 64px;                 /* below the nav */
@@ -307,12 +307,12 @@
         <h2>About</h2>
         <div class="card">
           <p>
-            I’m <b>Sigineni Venkata Sanath Reddy</b>, a Computer Science student at PES University (EC).
+            I'm <b>Sigineni Venkata Sanath Reddy</b>, a Computer Science student at PES University (EC).
             Outside of academics, I enjoy <b>playing cricket</b> and pushing myself to explore the limits of my mind —
             whether through problem-solving, strategy, or creative challenges.
           </p>
           <p>
-            I admire learning by doing. Over the last few years, I’ve worked on <b>real-world projects</b> under
+            I admire learning by doing. Over the last few years, I've worked on <b>real-world projects</b> under
             inspiring mentors and actively participated in <b>hackathons</b>, where my teams have been fortunate to win
             and grow from the experience. These journeys shaped me to value teamwork, curiosity, and the thrill of
             turning ideas into impact.
@@ -333,6 +333,15 @@
               <li>Provides 360° view of patient status to assist doctors.</li>
               <li>Improves diagnostic precision and reduces manual risks.</li>
               <li>Won <b>2nd place</b> at Heal-O-Thon (healthcare AI).</li>
+            </ul>
+          </article>
+          <article class="card">
+            <h3>Mental Health Monitor — Real-time Patient Assessment</h3>
+            <p class="muted">Multimodal AI system combining computer vision and audio analysis to assess patient wellbeing in rehabilitation settings.</p>
+            <ul>
+              <li>Integrated activity recognition and facial emotion detection using MediaPipe and TensorFlow.</li>
+              <li>Implemented weighted scoring with automated alerts for critical states.</li>
+              <li>Created live caregiver dashboard for continuous monitoring between therapy sessions.</li>
             </ul>
           </article>
           <article class="card">
